--- a/index.html
+++ b/index.html
@@ -1,263 +1,266 @@
 ﻿<!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
-    <title>BidStory</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
+  <title>BidStory</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-    <script src="/BidStory/js/tools.js"></script>
-    <script src="/BidStory/code/lang/imageAndLang.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/BidStory/js/dataBase/dbManager.js"></script>
-    <script src="/BidStory/js/table/table.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/BidStory/css/table.css" />
+  <script src="/BidStory/js/tools.js"></script>
+  <script src="/BidStory/code/lang/imageAndLang.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="/BidStory/js/dataBase/dbManager.js"></script>
+  <script src="/BidStory/js/table/table.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="/BidStory/css/table.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+  
 
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background-color: #f5f5f5;
-      }
 
-      nav {
-        background-color: #004080;
-        color: white;
-        padding: 10px;
-        text-align: center;
-      }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f5f5f5;
+    }
 
-      nav button {
-        background-color: #0073e6;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        margin: 5px;
-        cursor: pointer;
-        border-radius: 5px;
-        font-size: 16px;
-        transition: background-color 0.3s;
-      }
+    nav {
+      background-color: #004080;
+      color: white;
+      padding: 10px;
+      text-align: center;
+    }
 
-      nav button:hover {
-        background-color: #005bb5;
-      }
+    nav button {
+      background-color: #0073e6;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 5px;
+      cursor: pointer;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: background-color 0.3s;
+    }
 
-      .section {
-        display: none;
-        padding: 20px;
-        background-color: white;
-        margin: 10px;
-        border-radius: 10px;
-      }
+    nav button:hover {
+      background-color: #005bb5;
+    }
 
-      .active {
-        display: block;
-      }
+    .section {
+      display: none;
+      padding: 20px;
+      background-color: white;
+      margin: 10px;
+      border-radius: 10px;
+    }
 
-      .loader {
-        padding: 20px;
-        text-align: center;
-        font-weight: bold;
-        color: #555;
-      }
-    </style>
-  </head>
+    .active {
+      display: block;
+    }
 
-  <body>
-    <!-- ✅ شريط التنقل بين الأقسام الرئيسية -->
-    <nav>
-      <button onclick="showSection('allProjects')">
-        <img id="i_allmo" alt="allProjects" style="
+    .loader {
+      padding: 20px;
+      text-align: center;
+      font-weight: bold;
+      color: #555;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- ✅ شريط التنقل بين الأقسام الرئيسية -->
+  <nav>
+    <button onclick="showSection('allProjects')">
+      <img id="i_allmo" alt="allProjects" style="
             width: 20px;
             height: 20px;
             vertical-align: middle;
             margin-left: 5px;
           " />
-        <span id="t_159"></span>
-      </button>
-      <button onclick="showSection('setting')">
-        <img id="i_setting" alt="setting" style="
+      <span id="t_159"></span>
+    </button>
+    <button onclick="showSection('setting')">
+      <img id="i_setting" alt="setting" style="
             width: 20px;
             height: 20px;
             vertical-align: middle;
             margin-left: 5px;
           " />
-        <span id="t_62"></span>
-      </button>
-    </nav>
+      <span id="t_62"></span>
+    </button>
+  </nav>
 
-    <!-- ✅ شريط تنقل فرعي يظهر بعد اختيار مشروع -->
-    <nav id="nav2" style="display: none">
-      <button onclick="showSection('definition')">
-        <img id="i_id" alt="definition" style="
+  <!-- ✅ شريط تنقل فرعي يظهر بعد اختيار مشروع -->
+  <nav id="nav2" style="display: none">
+    <button onclick="showSection('definition')">
+      <img id="i_id" alt="definition" style="
             width: 20px;
             height: 20px;
             vertical-align: middle;
             margin-left: 5px;
           " />
-        <span id="t_253"></span>
-      </button>
-      <button onclick="showSection('pands')">
-        <img id="i_items" alt="pands" style="
+      <span id="t_253"></span>
+    </button>
+    <button onclick="showSection('pands')">
+      <img id="i_items" alt="pands" style="
             width: 20px;
             height: 20px;
             vertical-align: middle;
             margin-left: 5px;
           " />
-        <span id="t_633"></span>
-      </button>
-    </nav>
+      <span id="t_633"></span>
+    </button>
+  </nav>
 
-    <!-- ✅ الأقسام (تظهر حسب القسم المختار) -->
-    <div id="allProjects" class="section active"></div>
-    <div id="setting" class="section"></div>
-    <div id="definition" class="section"></div>
-    <div id="pands" class="section"></div>
-    <div id="selectedPand" class="section"></div>
+  <!-- ✅ الأقسام (تظهر حسب القسم المختار) -->
+  <div id="allProjects" class="section active"></div>
+  <div id="setting" class="section"></div>
+  <div id="definition" class="section"></div>
+  <div id="pands" class="section"></div>
+  <div id="selectedPand" class="section"></div>
 
-    <!-- ✅ JavaScript الخاص بالتهيئة والتحميل -->
-    <script>
-      const loadedPages = {
-        setting: false,
-        definition: false,
-        pands: false,
-        selectedPand: false,
-        allProjects: false,
-      };
+  <!-- ✅ JavaScript الخاص بالتهيئة والتحميل -->
+  <script>
+    const loadedPages = {
+      setting: false,
+      definition: false,
+      pands: false,
+      selectedPand: false,
+      allProjects: false,
+    };
 
-      const pageMap = {
-        setting: "pages/setting.html",
-        definition: "pages/projects/definition.html",
-        pands: "pages/projects/pands.html",
-        selectedPand: "pages/projects/selectedPand.html",
-        allProjects: "pages/projects/allProjects.html",
-      };
+    const pageMap = {
+      setting: "pages/setting.html",
+      definition: "pages/projects/definition.html",
+      pands: "pages/projects/pands.html",
+      selectedPand: "pages/projects/selectedPand.html",
+      allProjects: "pages/projects/allProjects.html",
+    };
 
-      let selectedPage = null; //تستخدم في دوال اخري خارج هذة الصفحة لذا يجب عدم تغير الاسم
-      let targetSection = null;
+    let selectedPage = null; //تستخدم في دوال اخري خارج هذة الصفحة لذا يجب عدم تغير الاسم
+    let targetSection = null;
 
-      document.addEventListener( "DOMContentLoaded", async () =>
+    document.addEventListener("DOMContentLoaded", async () =>
+    {
+      while ((await getLoadLangImageLists()) == false)
       {
-        while ( ( await getLoadLangImageLists() ) == false )
+        await new Promise((resolve) => setTimeout(resolve, 100));
+      }
+
+      const html = document.documentElement;
+      if (useArabic == true)
+      {
+        html.lang = "ar";
+        html.dir = "rtl";
+      } else
+      {
+        html.lang = "en";
+        html.dir = "ltr";
+      }
+
+      // يمكن تعيين القسم الافتراضي هنا إذا أردت
+      await showSection("allProjects");
+    });
+    //يجب الحفاظ علي اسم الداله كما هو لانها تستخدم من خارج الصفحة
+    async function showSection(sectionId)
+    {
+      await loadSection(sectionId);
+    }
+
+    async function loadSection(sectionId)
+    {
+      try
+      {
+        if (selectedPage === sectionId && loadedPages[sectionId]) return;
+
+        selectedPage = sectionId;
+        targetSection = document.getElementById(sectionId);
+
+        document
+          .querySelectorAll(".section")
+          .forEach((section) => section.classList.remove("active"));
+        targetSection.classList.add("active");
+
+        if (!loadedPages[sectionId] && pageMap[sectionId])
         {
-          await new Promise( ( resolve ) => setTimeout( resolve, 100 ) );
+          targetSection.innerHTML =
+            '<div class="loader">جاري التحميل...</div>';
+          await loadPageContent(sectionId, targetSection);
+          loadedPages[sectionId] = true;
         }
 
-        const html = document.documentElement;
-        if ( useArabic == true )
-        {
-          html.lang = "ar";
-          html.dir = "rtl";
-        } else
-        {
-          html.lang = "en";
-          html.dir = "ltr";
-        }
-
-        // يمكن تعيين القسم الافتراضي هنا إذا أردت
-        await showSection( "allProjects" );
-      } );
-      //يجب الحفاظ علي اسم الداله كما هو لانها تستخدم من خارج الصفحة
-      async function showSection ( sectionId )
+        await handleSectionInit(sectionId);
+        await setTextAndImage();
+      } catch (error)
       {
-        await loadSection( sectionId );
+        console.error("خطأ أثناء تحميل القسم:", error);
+        targetSection.innerHTML = "<p>⚠️ فشل تحميل الصفحة.</p>";
       }
+    }
 
-      async function loadSection ( sectionId )
+    async function loadPageContent(sectionId, container)
+    {
+      const url = pageMap[sectionId];
+      const response = await fetch(url);
+      if (!response.ok) throw new Error("الملف غير موجود");
+
+      const html = await response.text();
+      const temp = document.createElement("div");
+      temp.innerHTML = html;
+
+      const scripts = temp.querySelectorAll("script");
+      scripts.forEach((script) => script.remove());
+
+      container.innerHTML = temp.innerHTML;
+
+      // تحميل السكربتات واحداً تلو الآخر
+      for (const script of scripts)
       {
-        try
+        await new Promise((resolve, reject) =>
         {
-          if ( selectedPage === sectionId && loadedPages[ sectionId ] ) return;
-
-          selectedPage = sectionId;
-          targetSection = document.getElementById( sectionId );
-
-          document
-            .querySelectorAll( ".section" )
-            .forEach( ( section ) => section.classList.remove( "active" ) );
-          targetSection.classList.add( "active" );
-
-          if ( !loadedPages[ sectionId ] && pageMap[ sectionId ] )
+          const newScript = document.createElement("script");
+          if (script.src)
           {
-            targetSection.innerHTML =
-              '<div class="loader">جاري التحميل...</div>';
-            await loadPageContent( sectionId, targetSection );
-            loadedPages[ sectionId ] = true;
+            newScript.src = script.src;
+            newScript.onload = resolve;
+            newScript.onerror = reject;
+          } else
+          {
+            newScript.textContent = script.textContent;
+            resolve();
           }
-
-          await handleSectionInit( sectionId );
-          await setTextAndImage();
-        } catch ( error )
-        {
-          console.error( "خطأ أثناء تحميل القسم:", error );
-          targetSection.innerHTML = "<p>⚠️ فشل تحميل الصفحة.</p>";
-        }
+          document.body.appendChild(newScript);
+        });
       }
+    }
 
-      async function loadPageContent ( sectionId, container )
+    async function handleSectionInit(sectionId)
+    {
+      switch (sectionId)
       {
-        const url = pageMap[ sectionId ];
-        const response = await fetch( url );
-        if ( !response.ok ) throw new Error( "الملف غير موجود" );
-
-        const html = await response.text();
-        const temp = document.createElement( "div" );
-        temp.innerHTML = html;
-
-        const scripts = temp.querySelectorAll( "script" );
-        scripts.forEach( ( script ) => script.remove() );
-
-        container.innerHTML = temp.innerHTML;
-
-        // تحميل السكربتات واحداً تلو الآخر
-        for ( const script of scripts )
-        {
-          await new Promise( ( resolve, reject ) =>
-          {
-            const newScript = document.createElement( "script" );
-            if ( script.src )
-            {
-              newScript.src = script.src;
-              newScript.onload = resolve;
-              newScript.onerror = reject;
-            } else
-            {
-              newScript.textContent = script.textContent;
-              resolve();
-            }
-            document.body.appendChild( newScript );
-          } );
-        }
+        case "allProjects":
+          await initAllProjectPage();
+          document.getElementById("nav2").style.display = "none";
+          localStorage.setItem("selectedProject", "");
+          localStorage.setItem("selectedPand", "");
+          break;
+        case "definition":
+          await initDefinitionPage();
+          break;
+        case "pands":
+          await initItemsPage();
+          break;
+        case "selectedPand":
+          await initSelectedPandPage();
+          break;
       }
-
-      async function handleSectionInit ( sectionId )
-      {
-        switch ( sectionId )
-        {
-          case "allProjects":
-            await initAllProjectPage();
-            document.getElementById( "nav2" ).style.display = "none";
-            localStorage.setItem( "selectedProject", "" );
-            localStorage.setItem( "selectedPand", "" );
-            break;
-          case "definition":
-            await initDefinitionPage();
-            break;
-          case "pands":
-            await initItemsPage();
-            break;
-          case "selectedPand":
-            await initSelectedPandPage();
-            break;
-        }
-      }
-    </script>
-  </body>
+    }
+  </script>
+</body>
 
 </html>
