--- a/pages/projects/selectedPand.html
+++ b/pages/projects/selectedPand.html
@@ -64,6 +64,7 @@
                     <br> <span id="t_279"></span>
                 </button>
             </td>
+            //chartDuration
         </tr>
     </table>
 
