--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       setting: "pages/setting.html",
       definition: "pages/projects/definition.html",
       pands: "pages/projects/pands.html",
-      selectedPand: "pages/projects/selectedPand.html",
+      selectedPand: "pages/selectedPand/selectedPand.html",
       allProjects: "pages/projects/allProjects.html",
     };
 
@@ -199,7 +199,7 @@
       } catch (error)
       {
         console.error("خطأ أثناء تحميل القسم:", error);
-        targetSection.innerHTML = "<p>⚠️ فشل تحميل الصفحة.</p>";
+        targetSection.innerHTML = "<p>⚠️index فشل تحميل الصفحة.</p>";
       }
     }
 
